# ComfyUI-ComfyPeeper-compagnon

./: .gitignore  README.md  __init__.py  config.example.json  pyproject.toml
web/: comfypeeper.js
